--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:value="@integer/google_play_services_version"
         android:label="product_list_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
